# Sxcrape

./: .gitignore  AllEventURLs.hs  Event.hs  EventDetails.hs  EventURLs.hs  GetEvent.hs  GetEventDetails.hs  LICENSE  Makefile  ParserUtils.hs  README.md  Redis.hs  RedisTest.hs  StoreAllEvents.hs  Sxcrape.cabal  Sxcrape.hs  all-event-urls.hs  event-details.hs
src/: Artist.hs  DebugParse.hs  Event.hs  EventURLs.hs  ParseEventDoc.hs  Redis.hs  StoreAllEvents.hs  StoreEvent.hs  Sxcrape.hs  Sxred.hs  Utility.hs  Venue.hs
