Name:                Sxcrape
Version:             2012.9
Synopsis:            Scrape the SXSW music showcase schedule.
Description:         Scrape the SXSW music showcase schedule and:
                     - generate a list of all event URIs.
                     - dump the raw HTML for one or more events.
                     - transform essential event info into JSON.
                     - import into Redis.
Homepage:            https://github.com/quixoftic/Sxcrape
License:             BSD3
License-file:        LICENSE
Author:              Drew Hess <dhess-src@quixoftic.com>
Maintainer:          Drew Hess <dhess-src@quixoftic.com>
Copyright:           Copyright © 2013, Quixoftic, LLC <src@quixoftic.com>
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6

source-repository head
  type:     git
  location: https://github.com/quixoftic/Sxcrape.git

Executable sxcrape
           Hs-Source-Dirs:      src
           Main-Is:             Sxcrape.hs
           Build-Depends:       parsec,
                                http-conduit,
                                tagsoup,
                                text,
                                base >= 4.5.0.0 && < 5,
                                directory,
                                bytestring,
                                aeson,
                                cmdargs,
                                regex-tdfa,
                                regex-tdfa-utf8,
                                old-locale,
                                time,
                                filepath,
                                network,
                                ghc-prim

Executable sxred
           Hs-Source-Dirs:      src
           Main-Is:             Sxred.hs
           Build-Depends:       hedis,
                                text,
                                base >= 4.5.0.0 && < 5,
                                bytestring,
                                containers,
                                cmdargs,
                                transformers
